# cmake_package_registry

executable/: CMakeLists.txt  main.cpp
libexample/: CMakeLists.txt  example-config.cmake.in
libexample/include/example/: example.hpp
libexample/src/: CMakeLists.txt  example.cpp
